applications/training-app-deployment/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: training-app-backend-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: training-app-frontend-prod
