applications/training-app-deployment/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: khalilmk/t010:backend-1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
        - name: qr
          image: khalilmk/t010:qr-1.0 
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
