applications/training-app-deployment/qr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-deployment
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr
  template:
    metadata:
      labels:
        app: qr
    spec:
      containers:
        - name: qr
          image: tayssirgh/t013-qr:dev
          ports:
            - containerPort: 8420
---
apiVersion: v1
kind: Service
metadata:
  name: qr-service
  namespace: training-app-backend-prod
spec:
  selector:
    app: qr
  ports:
    - protocol: TCP
      port: 8420
      targetPort: 8420
