applications/training-app-deployment/website-service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: training-app-frontend-prod
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
