applications/training-app-deployment/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: training-app-backend-prod
spec:
  rules:
    - host: "app.backend.com"
      http:
        paths:
          - path: /access
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

# curl --resolve "app.backend.com:80:$( minikube ip )" -i http://app.backend.com/access
